# HTTP-request-builder

./: .gitignore  CMakeLists.txt  Dockerfile  GetRequestClient.cpp  GetRequestClient.hpp  HttpRequest.cpp  HttpRequest.hpp  README.md  test_get.cpp
docker_build/: CMakeLists.txt
src/: CMakeLists.txt  GetRequestClient.cpp  GetRequestClient.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpRequestBuilder.cpp  HttpRequestBuilder.hpp  test_get.cpp  test_requests.cpp
